--- a/lib/projects.json
+++ b/lib/projects.json
@@ -12,7 +12,7 @@
     "description": "Est, reiciendis aspernatur debitis maxime et itaque animi sit quod quo, tempore incidunt tempora dignissimos exercitationem enim numquam quam quaerat optio laborum ut unde hic delectus laboriosam? Quasi, cupiditate corporis."
   },
   {
-    "title": "Firestart",
+    "title": "Unicorn Uber App",
     "year": "2023",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
     "description": "Eligendi tenetur quae quos recusandae est. Cumque, voluptatem. Quo nihil dignissimos molestiae explicabo praesentium aspernatur debitis, illo rerum possimus quam ducimus earum nulla officiis maiores itaque repellat corporis soluta labore?"
