--- a/lib/projects.json
+++ b/lib/projects.json
@@ -3,31 +3,31 @@
     "title": "Recipe Length Analysis",
     "year": "2025",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor quos, quod assumenda explicabo odio, nobis ipsa laudantium quas eum veritatis ullam sint porro minima modi molestias doloribus cumque odit."
+    "description": "Does overall cooking time influence a user's rating on a recipe? What about the number of steps in a recipe? A project involving: exploratory data analysis, hypothesis testing, permutation testing, linear regression."
   },
   {
     "title": "Mental Health Clustering Analysis",
     "year": "2024",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Est, reiciendis aspernatur debitis maxime et itaque animi sit quod quo, tempore incidunt tempora dignissimos exercitationem enim numquam quam quaerat optio laborum ut unde hic delectus laboriosam? Quasi, cupiditate corporis."
+    "description": "How do you detect mental health patterns in the workplace? It's not easy, but it's always important to be aware of behavioral symptoms and know when to reach out for help. A project involving: exploratory data analysis, clustering."
   },
   {
-    "title": "Unicorn Uber App",
+    "title": "WildRydes",
     "year": "2023",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Eligendi tenetur quae quos recusandae est. Cumque, voluptatem. Quo nihil dignissimos molestiae explicabo praesentium aspernatur debitis, illo rerum possimus quam ducimus earum nulla officiis maiores itaque repellat corporis soluta labore?"
+    "description": "Have you ever wondered how Uber started? Well, it might work similarly to this. A project involving: Amazon S3, Amazon Cognito, Amazon API Gateway, AWS Lambda, Amazon DynamoDB, Amazon CloudFront."
   },
   {
     "title": "Firestart",
     "year": "2022",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Quo minus perferendis nulla corrupti repellat dolorem dolore assumenda sit minima ducimus quidem ullam, id ipsa dicta tempora laborum officiis unde possimus cumque nobis alias inventore! Ullam repudiandae iusto nam."
+    "description": "Is there a way to reduce methane gasses from releasing into the atmosphere? By using our Android app, you'll be one step closer to making the planet a better place. A project involving: computer vision, Twilio, Roboflow, Expo, React Native."
   },
   {
     "title": "Heart Attack Data Analysis",
     "year": "2022",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Laborum alias ea unde harum aspernatur? Molestiae, veritatis, possimus, numquam ex excepturi quod ducimus sit odit optio quibusdam sequi aliquid itaque tempore perspiciatis placeat expedita vero voluptates. Sit, aspernatur sint!"
+    "description": "What are the chances that someone experiences a heart attack based on their symptoms? A project involving: exploratory data analysis, classification (KNN, SVM, Random Forests, Gradient Boosting)"
   },
   {
     "title": "Quos sint quaerat omnis?",
