--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,5 +1,11 @@
 [
   {
+    "title": "Boston Bikewatching",
+    "year": "2025",
+    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+    "description": "How active are bike routes in Boston and Cambridge? A project involving: geospatial visualization, HTML, CSS, JavaScript, Mapbox."
+  },
+  {
     "title": "Recipe Length Analysis",
     "year": "2025",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
@@ -27,19 +33,13 @@
     "title": "Heart Attack Data Analysis",
     "year": "2022",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "What are the chances that someone experiences a heart attack based on their symptoms? A project involving: exploratory data analysis, classification (KNN, SVM, Random Forests, Gradient Boosting)"
+    "description": "What are the chances that someone experiences a heart attack based on their symptoms? A project involving: exploratory data analysis, classification (KNN, SVM, Random Forests, Gradient Boosting)."
   },
   {
     "title": "Quos sint quaerat omnis?",
-    "year": "2023",
+    "year": "2025",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
     "description": "Est neque, velit nam rerum error odio voluptates voluptatem magnam laboriosam ad? Doloribus, id et itaque unde porro totam ullam quaerat blanditiis odit animi eveniet aut, voluptate velit iure odio."
-  },
-  {
-    "title": "Iste ipsam magni fuga!",
-    "year": "2021",
-    "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-    "description": "Velit omnis suscipit nemo quia? Iste maiores numquam labore quia nemo eveniet odit, modi magnam? Architecto officia sint est. Architecto iste minima consequuntur explicabo illo error sed at dolore nostrum!"
   },
   {
     "title": "Ipsum, aperiam magni? Nobis.",
