--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "Boston Bikewatching",
+    "title": "Bikewatching",
     "year": "2025",
     "image": "https://vis-society.github.io/labs/2/images/empty.svg",
     "description": "How active are bike routes in Boston and Cambridge? A project involving: geospatial visualization, HTML, CSS, JavaScript, Mapbox."
